<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nealgosalia.shoppy.Fragments.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <EditText
            android:id="@+id/password2Field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existingUserText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</FrameLayout>
