<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nealgosalia.shoppy.Fragments.SignInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <Button
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:background="@color/colorPrimary"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />
        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newUserText"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />
        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebookLoginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

</FrameLayout>
